# termsky

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: app.rs  atp.rs  command.rs  event.rs  lib.rs  main.rs  prelude.rs  tui.rs  utils.rs  view.rs  widgets.rs
src/atp/: notifications.rs  posts.rs  response.rs  session.rs  types.rs
src/view/: home.rs  loading.rs  login.rs
src/widgets/: lazybuf.rs  post.rs  rect_ext.rs  store.rs  tab.rs  textarea.rs  view.rs
src/widgets/atoms/: block_ext.rs  mod.rs  spinner.rs  text.rs  textarea.rs
src/widgets/molecules/: tab.rs
src/widgets/organisms/: mod.rs  notification.rs  tabbar.rs
src/widgets/pages/: home.rs  loading.rs  login.rs  mod.rs  notifications.rs
