[package]
name = "termsky"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = { version = "0.1", features = ["release_max_level_off", "max_level_trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }

atrium-api = "0.18.6"
atrium-xrpc-client = "0.5.0"
reqwest = "0.11"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

ratatui = "0.26.1"
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"
scopeguard = "1.2"
