[package]
name = "termsky"
version = "0.0.0"
edition = "2021"

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs", "macros", "rt-multi-thread", "sync", "time"]

[dependencies]
anyhow = "1.0"
tracing = { version = "0.1", features = ["release_max_level_off", "max_level_trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

atrium-api = "0.20.0"
atrium-xrpc-client = "0.5.1"
reqwest = "*"
async-trait = "*"
serde_json = "1.0"
dirs = "5.0"

ratatui = { version = "0.26.2", features = ["unstable-widget-ref"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false }
tui-textarea = "0.4"
textwrap = "0.16"

nestify = "0.3"

[dev-dependencies]
indoc = "*"  # used in `ratatui::assert_buffer_eq`
